--- a/content/portfolio/32ae696.md
+++ b/content/portfolio/32ae696.md
@@ -1,6 +1,10 @@
 ---
 title: "32ae696"
 date: 2018-10-08T14:17:21+08:00
+link: 'https://project-p1.com'
+screenshot: 'p1.png'
+layout: 'portfolio'
+featured: true
 draft: true
 ---
 ##### commit: 32ae696
